--- a/package.json
+++ b/package.json
@@ -1,38 +1,39 @@
 {
-  "name": "ai_tutor",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@langchain/cohere": "^0.3.2",
-    "@langchain/community": "^0.3.42",
-    "@langchain/core": "^0.3.51",
-    "@langchain/google-genai": "^0.2.5",
-    "@upstash/redis": "^1.34.9",
-    "langchain": "^0.3.20",
-    "marked": "^15.0.12",
-    "next": "15.2.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "zustand": "^5.0.5"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.17",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.4",
-    "postcss": "^8.4.35",
-    "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+	"name": "ai_tutor",
+	"version": "0.1.0",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@langchain/cohere": "^0.3.2",
+		"@langchain/community": "^0.3.42",
+		"@langchain/core": "^0.3.51",
+		"@langchain/google-genai": "^0.2.5",
+		"@upstash/redis": "^1.34.9",
+		"langchain": "^0.3.20",
+		"marked": "^15.0.12",
+		"next": "15.2.4",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"zustand": "^5.0.5"
+	},
+	"devDependencies": {
+		"@eslint/eslintrc": "^3",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"autoprefixer": "^10.4.17",
+		"eslint": "^9",
+		"eslint-config-next": "15.2.4",
+		"postcss": "^8.4.35",
+		"prettier": "^3.5.3",
+		"prettier-plugin-tailwindcss": "^0.6.11",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5"
+	}
 }
