--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
 		"dev": "next dev --turbopack",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"test": "jest",
+		"test:watch": "jest --watch"
 	},
 	"dependencies": {
 		"@langchain/cohere": "^0.3.2",
@@ -24,16 +26,25 @@
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
+		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/react": "^16.3.0",
+		"@testing-library/user-event": "^14.6.1",
+		"@types/jest": "^29.5.14",
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
-		"autoprefixer": "^10.4.17",
+		"autoprefixer": "^10.4.21",
 		"eslint": "^9",
 		"eslint-config-next": "15.2.4",
-		"postcss": "^8.4.35",
+		"identity-obj-proxy": "^3.0.0",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^30.0.0-beta.3",
+		"postcss": "^8.5.3",
 		"prettier": "^3.5.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
-		"tailwindcss": "^3.4.1",
-		"typescript": "^5"
+		"tailwindcss": "^3.4.17",
+		"ts-jest": "^29.3.4",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.8.3"
 	}
 }
