--- a/package.json
+++ b/package.json
@@ -20,30 +20,34 @@
 		"langchain": "^0.3.20",
 		"marked": "^15.0.12",
 		"next": "15.2.4",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
 		"zustand": "^5.0.5"
 	},
 	"devDependencies": {
+		"@babel/preset-env": "^7.24.0",
+		"@babel/preset-react": "^7.23.3",
+		"@babel/preset-typescript": "^7.23.3",
 		"@eslint/eslintrc": "^3",
-		"@testing-library/jest-dom": "^6.6.3",
-		"@testing-library/react": "^16.3.0",
-		"@testing-library/user-event": "^14.6.1",
-		"@types/jest": "^29.5.14",
+		"@testing-library/jest-dom": "^6.4.2",
+		"@testing-library/react": "^14.2.1",
+		"@testing-library/user-event": "^14.5.2",
+		"@types/jest": "^29.5.12",
 		"@types/node": "^20",
-		"@types/react": "^19",
-		"@types/react-dom": "^19",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
 		"autoprefixer": "^10.4.21",
+		"babel-jest": "^29.7.0",
 		"eslint": "^9",
 		"eslint-config-next": "15.2.4",
 		"identity-obj-proxy": "^3.0.0",
 		"jest": "^29.7.0",
-		"jest-environment-jsdom": "^30.0.0-beta.3",
+		"jest-environment-jsdom": "^29.7.0",
 		"postcss": "^8.5.3",
 		"prettier": "^3.5.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"tailwindcss": "^3.4.17",
-		"ts-jest": "^29.3.4",
+		"ts-jest": "^29.1.2",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.8.3"
 	}
