--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@langchain/google-genai": "^0.2.5",
 		"@upstash/redis": "^1.34.9",
 		"langchain": "^0.3.20",
+		"lucide-react": "^0.516.0",
 		"marked": "^15.0.12",
 		"next": "15.2.4",
 		"react": "^18.2.0",
