--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,8 @@
 		".next/types/**/*.ts",
 		"jest.config.js",
 		"jest.setup.ts",
-		"src"
+		"src",
+		"next.config.js"
 	],
 	"exclude": ["node_modules"]
 }
