--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"dev": "next dev --turbopack",
+		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
@@ -20,9 +20,10 @@
 		"langchain": "^0.3.20",
 		"lucide-react": "^0.516.0",
 		"marked": "^15.0.12",
-		"next": "15.2.4",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
+		"next": "^15.2.4",
+		"next-intl": "^4.1.0",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
 		"zustand": "^5.0.5"
 	},
 	"devDependencies": {
