--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,6 @@
 {
-  "rules": {
-    "indent": ["error", "tab"]
-  }
+	"extends": ["next/core-web-vitals", "prettier"],
+	"rules": {
+		"no-mixed-spaces-and-tabs": "off"
+	}
 }
