--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"start": "next start",
 		"lint": "next lint",
 		"test": "jest",
-		"test:watch": "jest --watch"
+		"test:watch": "jest --watch",
+		"format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css}\""
 	},
 	"dependencies": {
 		"@langchain/cohere": "^0.3.2",
